--- a/mern-project-server/.env
+++ b/mern-project-server/.env
@@ -2,3 +2,5 @@ CLIENT_ENDPOINT=http://localhost:3000
 MONGO_URI=mongodb://localhost:27017/MERN-PROJECT
 GOOGLE_CLIENT_ID=684394087231-p09qfuocda4u3mv118gg1jn5gssk2obp.apps.googleusercontent.com
 JWT_SECRET=9efe7859-8bf7-44e8-83a3-cd77b51aa6b8
+GMAIL_EMAIL_ID=paldeepshikha102@gmail.com
+GMAIL_APP_PASSWORD=phxesdtzesvwflve
