--- a/mern-project-server/.env
+++ b/mern-project-server/.env
@@ -4,3 +4,5 @@ GOOGLE_CLIENT_ID=684394087231-p09qfuocda4u3mv118gg1jn5gssk2obp.apps.googleuserco
 JWT_SECRET=9efe7859-8bf7-44e8-83a3-cd77b51aa6b8
 GMAIL_EMAIL_ID=paldeepshikha102@gmail.com
 GMAIL_APP_PASSWORD=phxesdtzesvwflve
+RAZORPAY_KEY_ID=rzp_test_BjURZf2qvcqjQ8
+RAZORPAY_KEY_SECRET=5pKOQtC6DOzS784zWB7G0vjs
