--- a/mern-project-server/.gitignore
+++ b/mern-project-server/.gitignore
@@ -1,28 +1,13 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Environment files
+.env
 
-# testing
-/coverage
-
-# production
-/build
-dist/
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Logs
+logs
+*.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-package-lock.json
-.env*
-
+# Optional: OS-specific
+.DS_Store
