--- a/mern-project-1/.env.production
+++ b/mern-project-1/.env.production
@@ -1,2 +1,3 @@
 REACT_APP_GOOGLE_CLIENT_ID=684394087231-p09qfuocda4u3mv118gg1jn5gssk2obp.apps.googleusercontent.com
-REACT_APP_SERVER_ENDPOINT=http://localhost:5001
+REACT_APP_SERVER_ENDPOINT=https://affiliate-plus.onrender.com
+REACT_APP_RAZORPAY_KEY_ID=rzp_test_BjURZf2qvcqjQ8
